# django_work_2

./: .gitignore  library_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_blog_post.py  0003_alter_post_image_alter_post_tresh_and_more.py  0004_alter_post_views_count.py
blog/templates/: custom_tags.py
blog/templates/blog/: home.html  post_confirm_delete.html  post_detail.html  post_form.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_category_description_alter_product_description.py
catalog/templates/catalog/: base.html  catalogs.html  category_confirm_delete.html  category_detail.html  category_form.html  contacts.html  header.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
config/: settings.py  urls.py
students/: admin.py  forms.py  models.py  urls.py  views.py
students/templates/students/: about.html  header.html  index.html  mymodel_delete.html  mymodel_detail.html  mymodel_form.html  mymodel_list.html  student_detail.html  student_form.html  student_list.html  submit_data.html
