[tool.poetry]
name = "project-django2"
version = "0.1.0"
description = ""
authors = ["Daria"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
django = "^5.2.8"
whitenoise = "^6.11.0"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
pillow = "^12.0.0"
ipython = "^9.7.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.11.0"
requests = "^2.32.5"
coverage = "^7.11.3"
mypy = "^1.18.2"
pytest = "^9.0.0"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"